--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+  <base href="/aurelia-recursive-navigation-sample/">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.0/semantic.min.css" />
 </head>
 
 <body aurelia-app="main">
-</body>
+<script type="text/javascript" src="/aurelia-recursive-navigation-sample/common.5fd7300c4f29e8cbfffa.bundle.js"></script><script type="text/javascript" src="/aurelia-recursive-navigation-sample/app.5fd7300c4f29e8cbfffa.bundle.js"></script><script type="text/javascript" src="/vendor.5fd7300c4f29e8cbfffa.bundle.js"></script></body>
 
 </html>
