--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 </head>
 
 <body aurelia-app="main">
-<script type="text/javascript" src="/common.52fa6433a8688f5f1065.bundle.js"></script><script type="text/javascript" src="/app.52fa6433a8688f5f1065.bundle.js"></script><script type="text/javascript" src="/vendor.52fa6433a8688f5f1065.bundle.js"></script></body>
+<script type="text/javascript" src="https://fkleuver.github.io/common.52fa6433a8688f5f1065.bundle.js"></script><script type="text/javascript" src="https://fkleuver.github.io/app.52fa6433a8688f5f1065.bundle.js"></script><script type="text/javascript" src="https://fkleuver.github.io/vendor.52fa6433a8688f5f1065.bundle.js"></script></body>
 
 </html>
