--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+  <base href="https://fkleuver.github.io/aurelia-recursive-navigation-sample/">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.0/semantic.min.css" />
 </head>
 
 <body aurelia-app="main">
-<script type="text/javascript" src="https://fkleuver.github.io/common.52fa6433a8688f5f1065.bundle.js"></script><script type="text/javascript" src="https://fkleuver.github.io/app.52fa6433a8688f5f1065.bundle.js"></script><script type="text/javascript" src="https://fkleuver.github.io/vendor.52fa6433a8688f5f1065.bundle.js"></script></body>
+<script type="text/javascript" src="/common.ac1682644ac374a3c659.bundle.js"></script><script type="text/javascript" src="/app.ac1682644ac374a3c659.bundle.js"></script><script type="text/javascript" src="/vendor.ac1682644ac374a3c659.bundle.js"></script></body>
 
 </html>
